more changes in jupyter notebook

--- a/My Juptyer Notebook.ipynb
+++ b/My Juptyer Notebook.ipynb
@@ -31,11 +31,11 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "Say Hello!!\n"
+     "text": "Sayit out loud!\n"
     }
    ],
    "source": [
-    "tekst = \"Say Hello!!\"\n",
+    "tekst = \"Sayit out loud!\"\n",
     "print(tekst)"
    ]
   },
